# AnadoLogic-RP_Pico-Internship

./: CMakeLists.txt  README.md  project.c
Raspberry Pico 2040 - I2C - ST L3G4200D Gyroscope/: CMakeLists.txt  project.c
Raspberry Pico 2040 - SPI - ST L3G4200D Gyroscope/: CMakeLists.txt  project.c
Raspberry Pico 2040 - TinyUSB/: CMakeLists.txt  project.c
Raspberry Pico 2040 - UART/: project.c
